refuerzo-conceptual/manifiestos/pod-readiness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-readiness
  namespace: probes-demo
  labels:
    app: web
spec:
  containers:
    - name: nginx
      image: nginx
      readinessProbe:
        exec:
          command: ["cat", "/usr/share/nginx/html/healthz"]
        periodSeconds: 5
        failureThreshold: 1
